# cs234-project

./: CLAUDE.md  eval_quick.ipynb  eval_quick.py  filter_preferences.py  generate_pairs.py  generate_preferences.py  generate_preferences_v2.py  indirect_grpo.ipynb  inspect_preferences.py  milestone_updated.tex  pyproject.toml  results_direct_grpo.md  train_grpo_direct.ipynb  train_grpo_indirect_eval.py  train_reward_model.py
colab/eval_outputs/: alpaca_base.jsonl  alpaca_direct.jsonl  alpaca_indirect.jsonl  ifeval_base.jsonl  ifeval_direct.jsonl  ifeval_indirect.jsonl
colab/eval_outputs_claude/: alpaca_base.jsonl  alpaca_direct.jsonl  alpaca_indirect.jsonl  ifeval_base.jsonl  ifeval_direct.jsonl  ifeval_indirect.jsonl
colab/eval_results/: ifeval_results.json  ifeval_table.txt  inspection_report.html  inspection_summary.json  inspection_summary.txt  training_stats.txt
colab/grpo_direct/: README.md  eval_quick.ipynb
colab/grpo_direct/checkpoint-100/: rng_state.pth  trainer_state.json
colab/grpo_direct/checkpoint-150/: rng_state.pth  scheduler.pt  trainer_state.json
colab/grpo_direct/checkpoint-200/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
colab/grpo_indirect/: README.md  adapter_config.json  tokenizer_config.json
colab/reward_model/: README.md  config.json
direct/: train_grpo_direct.py
eval/: eval_pipeline.ipynb  eval_pipeline_claude.ipynb  generate_outputs.py  inspect_outputs.py  plot_diagnostics.py  run_alpacaeval.py  run_alpacaeval_claude.py  run_ifeval.py
indirect/: train_grpo_indirect.py  train_reward_model.py
(+9 files in other folders)
