[project]
name = "cs234-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "ipykernel>=7.2.0",
    "openai>=2.24.0",
    "peft>=0.15.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.28.0",
]
